lrg/prompting/templates/coverage-contradiction-tax/v0.3/turn1.md
<user> <ข้อกฎหมาย>
<law section=85/15 ประมวลรัษฎากร> ประมวลรัษฎากร มาตรา 85/15 ผู้ประกอบการจดทะเบียนใดเลิกประกอบกิจการให้ผู้ประกอบการจดทะเบียนนั้นแจ้งการเลิกกิจการตามแบบที่อธิบดีกำหนด ณ สถานที่ที่ได้จดทะเบียนภาษีมูลค่าเพิ่มไว้ภายในสิบห้าวันนับจากวันเลิกประกอบกิจการ
ให้ผู้ประกอบการจดทะเบียนที่เลิกกิจการคืนใบทะเบียนภาษีมูลค่าเพิ่ม ณ สถานที่ที่ได้จดทะเบียนภาษีมูลค่าเพิ่มไว้พร้อมกับการแจ้งเลิกประกอบกิจการ
</law>
<law section=105 ประมวลรัษฎากร> ประมวลรัษฎากร มาตรา 105 ในกรณีต่อไปนี้ ผู้ขาย ผู้ให้เช่าซื้อ ผู้รับเงิน หรือผู้รับชำระราคาต้องออกใบรับให้แก่ผู้ซื้อ ผู้เช่าซื้อ ผู้จ่ายเงินหรือผู้ชำระราคา ในทันทีทุกคราวที่รับเงินหรือรับชำระราคาไม่ว่าจะมีการเรียกร้องให้ออกใบรับหรือไม่ก็ตาม
(1) การรับเงินหรือรับชำระราคาจากการขายสินค้าหรือการให้บริการของผู้ประกอบการจดทะเบียนภาษีมูลค่าเพิ่มตามหมวด 4 และการรับเงินหรือรับชำระราคาจากการกระทำกิจการของผู้ประกอบกิจการที่จดทะเบียนภาษีธุรกิจเฉพาะที่ต้องเสียภาษีธุรกิจเฉพาะตามหมวด 5 ซึ่งรวมเงินหรือราคาที่ได้รับชำระแต่ละครั้งเกินจำนวนเงินตามที่อธิบดีกำหนด แต่อธิบดีจะกำหนดเกินหนึ่งพันบาทไม่ได้
(2) การรับเงินหรือรับชำระราคาในกรณีอื่นซึ่งรวมเงิน หรือราคาที่ได้รับชำระแต่ละครั้งเกินจำนวนเงินตามที่อธิบดีกำหนด แต่อธิบดีจะกำหนดเกินหนึ่งหมื่นบาทไม่ได้
ถ้าการรับเงินหรือรับชำระราคาในกรณีเดียวกันมีจำนวนเกินกว่าที่อธิบดีกำหนดตาม (1) หรือ (2) แต่มีเงื่อนไขให้รับเงินหรือรับชำระราคาในภายหลังเป็นหลายงวด ให้ออกใบรับทุกคราวในทันทีที่รับเงินหรือรับชำระราคานั้น
ผู้ประกอบการจดทะเบียนภาษีมูลค่าเพิ่มซึ่งได้ออกใบกำกับภาษีที่มีข้อความแสดงว่าได้รับเงินหรือรับชำระราคาแล้ว จะถือเอาใบกำกับภาษีนั้นเป็นใบรับที่ต้องออกตามมาตรานี้ก็ได้
มาตรานี้ไม่ใช้บังคับแก่การจำหน่ายแสตมป์อากร หรือแสตมป์อื่นของรัฐบาลที่ยังมิได้ใช้
</law>
<law section=105 จัตวา ประมวลรัษฎากร> ประมวลรัษฎากร มาตรา 105 จัตวา ในการขายสินค้าให้ผู้ประกอบการตามหมวด 4 ที่เป็นผู้ผลิต ผู้นำเข้า ผู้ส่งออกหรือผู้ขายส่ง เมื่อมีการขายสินค้าให้ออกใบส่งของให้แก่ผู้ซื้อและให้ทำสำเนาเก็บไว้เป็นเวลาไม่น้อยกว่าห้าปี นับแต่วันที่ออกใบส่งของ
ใบส่งของและสำเนาตามความในวรรคก่อน อย่างน้อยต้องมีตัวเลขและอักษรไทยให้ปรากฏข้อความต่อไปนี้
(1) ชื่อ หรือยี่ห้อและเลขประจำตัวผู้เสียภาษีอากรของผู้ขาย
(2) ชื่อ หรือยี่ห้อของผู้ซื้อ
(3) เลขลำดับของเล่ม (ถ้ามี) และของใบส่งของ
(4) วัน เดือน ปี ที่ออกใบส่งของ
(5) ชนิด ชื่อ จำนวน และราคาของสินค้าที่ขายตัวเลขไทยนั้นจะใช้เลขอารบิคแทนก็ได้
ผู้ประกอบการจดทะเบียนภาษีมูลค่าเพิ่มตามหมวด 4 ซึ่งได้ออกใบกำกับภาษีที่มีข้อความแสดงว่าได้ส่งสินค้าให้แก่ผู้ซื้อแล้ว จะถือเอาใบกำกับภาษีนั้นเป็นใบส่งของที่ต้องออกตามมาตรานี้ก็ได้
</law>
<law section=85/19 ประมวลรัษฎากร> ประมวลรัษฎากร มาตรา 85/19 ในกรณีดังต่อไปนี้ให้อธิบดีสั่งขีดชื่อผู้ประกอบการจดทะเบียนดังกล่าวออกจากทะเบียนภาษีมูลค่าเพิ่ม
(1) เมื่ออธิบดีสั่งถอนทะเบียนตามมาตรา 85/10
(2) เมื่อผู้ประกอบการจดทะเบียนเลิกประกอบกิจการตามมาตรา 85/15
(3) เมื่อผู้ประกอบการจดทะเบียนตายและไม่มีผู้จัดการมรดกหรือทายาทยื่นขอโอนกิจการของผู้ประกอบการจดทะเบียนที่ถึงแก่ความตายตามมาตรา 85/16
(4) เมื่ออธิบดีสั่งเพิกถอนการจดทะเบียนภาษีมูลค่าเพิ่มตามมาตรา 85/17
ให้อธิบดีแจ้งคำสั่งขีดชื่อให้ผู้ประกอบการจดทะเบียน ผู้จัดการมรดก ทายาท หรือผู้ครอบครองทรัพย์มรดกทราบเป็นหนังสือโดยไม่ชักช้า
ให้ผู้ประกอบการจดทะเบียนหรือผู้ครอบครองทรัพย์มรดกที่รับผิดชอบในการดำเนินกิจการของผู้ตายและได้ใช้สิทธิดำเนินกิจการตามมาตรา 85/16 พ้นความรับผิดในฐานะผู้ประกอบการจดทะเบียนในวันที่อธิบดีมีคำสั่งขีดชื่อออกจากทะเบียน
ถ้าผู้ประกอบการจดทะเบียนเป็นนิติบุคคล ให้อธิบดีแจ้งการขีดชื่อออกจากทะเบียนภาษีมูลค่าเพิ่มนั้นต่อนายทะเบียนนิติบุคคลตามกฎหมายนั้น ๆ ภายในสามสิบวัน และให้นายทะเบียนดังกล่าวจดแจ้งการเพิกถอนการจดทะเบียนภาษีมูลค่าเพิ่มไว้ในทะเบียนโดยไม่ชักช้า
</law>
<law section=82/3 ประมวลรัษฎากร> ประมวลรัษฎากร มาตรา 82/3 ภายใต้บังคับมาตรา 82/7 มาตรา 82/8 และมาตรา 82/16 ให้ผู้ประกอบการเสียภาษีมูลค่าเพิ่มโดยคำนวณจากภาษีขายหักด้วยภาษีซื้อในแต่ละเดือนภาษี
หากภาษีขายมากกว่าภาษีซื้อ ให้ผู้ประกอบการชำระภาษีเท่ากับส่วนต่างนั้น
หากภาษีซื้อมากกว่าภาษีขาย ให้เป็นเครดิตภาษีและให้ผู้ประกอบการนั้นมีสิทธิได้รับคืนภาษีหรือนำไปชำระภาษีมูลค่าเพิ่มได้ตามส่วน 8
ภาษีซื้อที่มิได้นำไปหักในการคำนวณภาษีในเดือนภาษีตามวรรคหนึ่งเพราะมีเหตุจำเป็นตามที่อธิบดีกำหนด ให้มีสิทธินำไปหักในการคำนวณภาษีในเดือนภาษีหลังจากนั้นได้ตามหลักเกณฑ์ วิธีการ และเงื่อนไขที่อธิบดีกำหนด แต่ต้องไม่เกินสามปีนับจากวันที่ได้มีการออกใบกำกับภาษี
</law>
</ข้อกฎหมาย>
<ข้อหารือ> บริษัทฯ เป็นผู้ประกอบการจดทะเบียน ประกอบกิจการซื้อมาขายไปกาแฟกระป๋อง หัวน้ำเชื้อ และหัวน้ำเชื้อชาเขียว ช. ได้ยื่นคำร้องของดเบี้ยปรับภาษีมูลค่าเพิ่ม สำหรับเดือนภาษีเมษายน 2551 เดือนภาษีพฤษภาคม 2551 เดือนภาษีกรกฎาคม 2551 และเดือนภาษีตุลาคม 2551 โดยมีข้อเท็จจริงว่า เจ้าพนักงานประเมินได้ตรวจ0สอบการขอคืนภาษี กรณีที่บริษัทฯ ยื่นแบบแสดง รายการภาษีมูลค่าเพิ่ม (ภ.พ.30) ฉบับยื่นปกติรวมภาษีที่ขอคืนเป็นเงินจำนวน 1,510,423.08 บาท\n บริษัทฯ ได้จดทะเบียนเลิกบริษัทต่อกระทรวงพาณิชย์เมื่อวันที่ 30 มกราคม 2551 พร้อมทั้งยื่นแบบคำขอแจ้งการเปลี่ยนแปลง ทะเบียนภาษีมูลค่าเพิ่ม (ภ.พ.09) แจ้งเลิกต่อกรมสรรพากรเมื่อวันที่ 14 กุมภาพันธ์ 2551 ภาษีซื้อที่บริษัทฯ นำมาใช้ในการยื่นแบบ ภ.พ.30 สำหรับเดือนภาษีดังกล่าวเป็นภาษีซื้อที่เกิดจากการส่งเสริมการขายและค่าที่ปรึกษาทางกฎหมาย ซึ่งบริษัทฯ ได้รับบริการ ก่อนวันแจ้งเลิกการประกอบกิจการ แต่ได้รับใบกำกับภาษีภายหลังวันที่ยื่นแบบ ภ.พ.09 โดยใบกำกับภาษีลงวันที่ 4 เมษายน 2551 วันที่ 8 พฤษภาคม 2551 วันที่ 3 กรกฎาคม 2551 และวันที่ 30 ตุลาคม 2551 กรณีดังกล่าวหากบริษัทฯ ยังไม่ถูกขีดชื่อออกจากทะเบียนภาษีมูลค่าเพิ่ม และได้นำภาษีซื้อตามใบกำกับภาษีดังกล่าวมาใช้ในการคำนวณภาษีมูลค่าเพิ่ม โดยมิได้แสดงรายละเอียด การใช้สิทธิขอนำภาษีซื้อตามใบกำกับภาษีดังกล่าวมาหักในการคำนวณภาษีในเอกสารตามที่อธิบดีกำหนดพร้อมกับการยื่นแบบ ภ.พ.09 ตามข้อ 6 ของคำสั่งกรมสรรพากรที่ ป.66/2539 เรื่อง การแจ้งเลิกประกอบกิจการตามมาตรา 85/15 แห่งประมวลรัษฎากร ลงวันที่ 29 ธันวาคม พ.ศ. 2539\n 1. บริษัทฯ มีสิทธินำภาษีซื้อตามใบกำกับภาษีดังกล่าวมาใช้ในการคำนวณภาษีมูลค่าเพิ่มในการยื่นแบบ ภ.พ.30 ภายหลัง การยื่นแบบ ภ.พ.09 ได้หรือไม่\n 2. หากบริษัทฯ ไม่มีสิทธินำภาษีซื้อตามใบกำกับภาษีดังกล่าวมาใช้ตามข้อ 1. บริษัทฯ จะต้องเสียเบี้ยปรับกรณีนำภาษีซื้อ มาใช้เกินไปตามมาตรา 89(4) แห่งประมวลรัษฎากรหรือไม่ และบริษัทฯ จะต้องยื่นแบบ ค.10 เพื่อขอคืนภาษีใช่หรือไม่ </ข้อหารือ>
<reference_answer> 1. บริษัทฯ ไม่มีสิทธินำภาษีซื้อตามใบกำกับภาษีดังกล่าวมาใช้ในการคำนวณภาษีมูลค่าเพิ่มในการยื่นแบบ ภ.พ.30 ภายหลังการยื่นแบบ ภ.พ.09; 2. บริษัทฯ จะต้องเสียเบี้ยปรับกรณีนำภาษีซื้อมาใช้เกินไปตามมาตรา 89(4) และต้องยื่นแบบ ค.10 เพื่อขอคืนภาษี </reference_answer>
<student_answer> 1. บริษัทฯ ไม่มีสิทธินำภาษีซื้อตามใบกำกับภาษีดังกล่าวมาใช้ในการคำนวณภาษีมูลค่าเพิ่มในการยื่นแบบ ภ.พ.30 ภายหลังการยื่นแบบ ภ.พ.09 ได้ 2. บริษัทฯ จะต้องเสียเบี้ยปรับกรณีนำภาษีซื้อมาใช้เกินไปตามมาตรา 89(4) แห่งประมวลรัษฎากร และบริษัทฯ จะต้องยื่นแบบ ค.10 เพื่อขอคืนภาษี </student_answer>

<assistant> ```json
{"point_thought": "From the given reference answer, the student answer and ข้อหารือ, the student answer is making two points as explicitly stated by the numbered list. The reference answer is also making two points stated by the numbered list as well. These two points corresponds with the two questions made by the ข้อหารือ. Therefore, I should put these two points in lists",
 "student_point": ["1. บริษัทฯ ไม่มีสิทธินำภาษีซื้อตามใบกำกับภาษีดังกล่าวมาใช้ในการคำนวณภาษีมูลค่าเพิ่มในการยื่นแบบ ภ.พ.30 ภายหลังการยื่นแบบ ภ.พ.09 ได้", "2. บริษัทฯ จะต้องเสียเบี้ยปรับกรณีนำภาษีซื้อมาใช้เกินไปตามมาตรา 89(4) แห่งประมวลรัษฎากร และบริษัทฯ จะต้องยื่นแบบ ค.10 เพื่อขอคืนภาษี"],
 "reference_point": ["1. บริษัทฯ ไม่มีสิทธินำภาษีซื้อตามใบกำกับภาษีดังกล่าวมาใช้ในการคำนวณภาษีมูลค่าเพิ่มในการยื่นแบบ ภ.พ.30 ภายหลังการยื่นแบบ ภ.พ.09;", "2. บริษัทฯ จะต้องเสียเบี้ยปรับกรณีนำภาษีซื้อมาใช้เกินไปตามมาตรา 89(4) และต้องยื่นแบบ ค.10 เพื่อขอคืนภาษี"],
 "caution": "Caution:
    1. MAKE SURE TO PROVIDE A REASONABLE THOUGHT PROCESS AS WELL.
    2. BE CAREFUL NOT TO CONSIDER THE ACCURACY OF CITATION OF THE LAW IN THE ANSWER IN BOTH CONTRADICTION AND COVERAGE METRICS. THERE IS A SEPARATE METRIC FOR THAT. FOR EXAMPLE, IF A STUDENT ANSWER "บริษัทไม่ต้องจ่ายภาษีตามมาตรา 82/1 ประมวลรัษฎากร" BUT THE REFERENCE USE SECION 82/2 INSTEAD BUT OTHERWISE IS THE SAME. THE COVERAGE SCORE IS 100 WHILE THE CONTRADICTION SCORE IS 0. PLEASE BE VERY CAREFUL OF THIS!!!
    3. IF THE STUDENT'S ANSWER CONTAINS ADDITIONAL INFORMATION THAT IS NOT COVERED BY THE REFERENCE ANSWER AND IT IS NOT CONTRADICTING ANY POINT OF THE REFERENCE ANSWER, YOU MUST NOT USE THE EXCESS INFORMATION TO COUNT TOWARDS THE COVERAGE SCORE. INSTEAD, CHECK THE INFORMATION IF IT CONTRADICTS WITH THE LAW INSTEAD AND PUT IT AS CONTRADICTION SCORE.
    4. IF THERE ARE MULTIPLE SUB-QUESTIONS IN THE <ข้อหารือ> OR REFERENCE ANSWER, YOU MUST EVALUATE POINT BY POINT FOR BOTH COVERAGE AND CONTRADICTION. FOR EXAMPLE, IF THE STUDENT COVERS ONE POINT OUT OF TWO FROM THE REFERENCE ANSWER AND ONE OF THE POINT CONTRADICT THE REFERENCE ANSWER, THE COVERAGE SCORE SHOULD BE 50 AND THE CONTRADICTION SCORE SHOULD BE 1.
    5. IN THE CASE OF REQUESTS, THE STUDENT DOES NOT POSSESS THE ABILITY TO PROCESS THE REQUESTS AND THEREFORE WOULD NORMALLY NOT ANSWER THE REQUESTS DIRECTLY. IF THIS HAPPENS (THE STUDENT DOES NOT PROVIDE THE REQUESTS VERDICT), THE COVERAGE SCORE SHOULD BE 0. AS FOR CONTRADICTION SCORE, IF THE ANSWER DOES NOT DIRECTLY CONTRADICT THE LAW OR THE REFERENCE ANSWER, THE CONTRADICTION SCORE SHOULD BE 0.",
 "coverage": {"thought": "From the extracted student and reference points, there are two points in the reference answer and in the student answer and the student's answer covers both point of the reference about how the company has no right to use buying tax from the said tax invoice to calculate its VAT when submitting ภ.พ.30 after filing ภ.พ.09. Furthermore, the student answer also covers the point about how the company is subjected to a penalty for using excess input tax under Section 89(4) and must file a return tax form ค.10. Therefore, since the student answer covers all aspect of the reference answer, the student answer has full coverage.", "grade": 100}, "contradiction": {"thought": "From the points extracted from reference and student answer, point 1 of the student does not directly contradict with the any points from the reference answer same with point 2 of the student. Therefore, the contradiction score would be 0", "grade": 0}}
```